--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <span class="icon-bar"></span>
           </button>
 
-          <a class="navbar-brand" href="#"><img src="assets/images/logo.png">
+          <a class="navbar-brand" href="#-"><img src="assets/images/logo.png">
           </a>
         </div>
 
@@ -160,11 +160,11 @@
   <form class="form-inline">
     <div class="form-group">
       <label for="exampleInputName2">Name</label>
-      <input type="text" class="form-control" id="exampleInputName2" placeholder="Jane Doe">
+      <input type="text" class="form-control" id="exampleInputName2" >
     </div>
     <div class="form-group">
       <label for="exampleInputEmail2">Email</label>
-      <input type="email" class="form-control" id="exampleInputEmail2" placeholder="jane.doe@example.com">
+      <input type="email" class="form-control" id="exampleInputEmail2" >
     </div>
     <button type="submit" class="btn btn-default">Keep Me Posted</button>
   </form>
